--- a/page1.css
+++ b/page1.css
@@ -1,23 +1,26 @@
+
 .container{
-	width:600px;
-	height:500px;
-	margin:150px auto;
+	width:700px;
+	height:400px;
+	margin:125px auto;
 	padding:5px;
-	font-family: Verdana;
-	font-size:15px;
-	
+	font-family: 'Roboto', sans-serif;
+	font-size:1rem;
 }
-.Bold-tasks{
-	display:inline-block;
-	font-size:35px;
+.heading-container{
+	font-weight:400;
+	display:flex;
 }
-.Lighter-lists{
-	width:58%;
-	display:inline-block;
-	font-size:35px;
+.bold-tasks{
+	font-size:3rem;
+	font-weight:bolder;
 }
-.Add-symbol{
-	display:inline-block;
+.lighter-lists{
+	width:55%;
+	font-size:3rem;
+	font-weight:lighter;
+}
+.add-symbol{
 	height:30px;
 	padding:0px;
 	width:30px;
@@ -27,39 +30,77 @@
 	text-align:center;
 	border-radius:50%;
 	background-color:red;
+	margin:14px 0px;
 }
-.Add-list{
-	display:inline-block;
-	font-size:25px;
+.add-list{
+	font-size:1.5rem;
+	font-weight:lighter;
+	margin:14px 0px 14px 8px;
 }
 .task-list-container{
-	margin-top:40px;
+	margin-top:2rem;
 	display:flex;
 	flex-wrap:wrap;
 	justify-content:space-between;
 }
-.Task-details-container{
+.task-details-container{
 	border:1px solid rgb(255,0,0,0.5);
-	height:250px;
-	width:150px;
+	height:300px;
+	width:200px;
 	border-radius:5px;
 	box-shadow: 5px 5px 5px grey;
 }
 .task-name-container{
-	margin-left:20px;
+	margin-left:30px;
 }
-.Task-name{
-	margin-top:20px; 
-	/*text-align:center;*/
-	font-size:16px;
+.task-name{
+	margin:20px 0px; 
+	font-size:1.3rem;
 	font-weight:100;
 	color:red;
 }
-.Task-completion{
-	margin:20px 0px 10px 20px;
+.task-completion{
+	margin:30px 0px 20px 25px;
 	text-decoration:line-through solid;
 	font-weight:bold;
 	color:red;
+	font-size:1.1rem;
+}
+.task-pending{
+	margin-left:10px;
+}
+
+@media screen and ( min-width:320px ) and ( max-width:480px ) {
+	.container {
+		width:90%;
+		margin:50px 10px 0px 10px;
+	}
+	.lighter-lists {
+		width:40%;
+	}
+	.add-list {
+		display:none;
+	}
+	.task-name-container {
+		width:95%;
+	}
+	.task-name{
+		color:grey;
+	}
+	.h-line {
+		display:none;
+	}
+	.task-completion{
+		display:none;
+	}
+	.task-pending{
+		display:none;
+	}
+	.task-details-container{
+		height:auto;
+		width:100%;
+		margin-bottom:2rem;
+	}
 }
 
 	
