--- a/page3.css
+++ b/page3.css
@@ -1,24 +1,83 @@
-body, html {
-    height: 100%;
-  }
-.background-fill{
-	position:relative;
-	border:1px solid red;
-	height:100%;
-	width:100%; 	
-	background-image: url("../Images/page1.png");
-	filter:blur(8px);
-	background-repeat:no-repeat;
-	background-size:contain;
-	background-position:center;
-	
+
+.container{
+	width:700px;
+	height:400px;
+	margin:125px auto;
+	padding:5px;
+	font-family: 'Roboto', sans-serif;
+	font-size:1rem;
+	filter:blur(6px);
+}
+.heading-container{
+	font-weight:400;
+}
+.bold-tasks{
+	display:inline-block;
+	font-size:3rem;
+	font-weight:bolder;
+}
+.lighter-lists{
+	width:55%;
+	display:inline-block;
+	font-size:3rem;
+	font-weight:lighter;
+}
+.add-symbol{
+	display:inline-block;
+	height:30px;
+	padding:0px;
+	width:30px;
+	border:0px;
+	color:white;
+	font-size:25px;
+	text-align:center;
+	border-radius:50%;
+	background-color:red;
+}
+.add-list{
+	display:inline-block;
+	font-size:1.5rem;
+	font-weight:lighter;
+}
+.task-list-container{
+	margin-top:2rem;
+	display:flex;
+	flex-wrap:wrap;
+	justify-content:space-between;
+}
+.task-details-container{
+	border:1px solid rgb(255,0,0,0.5);
+	height:300px;
+	width:200px;
+	border-radius:5px;
+	box-shadow: 5px 5px 5px grey;
+}
+.task-name-container{
+	margin-left:30px;
+}
+.task-name{
+	margin:20px 0px; 
+	font-size:1.3rem;
+	font-weight:100;
+	color:red;
+}
+.task-completion{
+	margin:30px 0px 20px 25px;
+	text-decoration:line-through solid;
+	font-weight:bold;
+	color:red;
+	font-size:1.1rem;
+}
+.task-pending{
+	margin-left:10px;
 }
 .add-task-container{
-	width:250px;
+	width:300px;
 	border:1px solid red;
-	border-radius:3px;
+	border-radius:8px;
 	text-align:center;
 	padding:20px;
+	padding-bottom:0px;
 	font-family: Verdana;
 	box-shadow:5px 5px 3px 0px grey;
 	position:absolute;
@@ -32,21 +91,70 @@ body, html {
 	text-align:center;
 	padding-bottom:20px;
 }
-input{
-	height:20px;
-	width:175px;
+input[type=text]{
+	height:25px;
+	width:250px;
 	border:1px solid orangered;
+	border-radius:3px;
 	box-shadow:3px 3px 3px 0px grey;
 }
 .add-button{
-	height:20px;
-	width:60px;
+	height:25px;
+	width:65px;
 	border:0px;
-	border-radius:10px;
+	border-radius:15px;
 	cursor:pointer;
 	color:white;
 	background-color:red;
-	margin: 15px auto;
+	margin: 25px auto;
 	text-align:center;
-	
+	padding-top:3px;
+}
+
+
+@media screen and ( min-width:320px ) and ( max-width:480px ) {
+	.container {
+		width:90%;
+		margin:50px 10px 0px 10px;
+	}
+	.lighter-lists {
+		width:40%;
+	}
+	.add-list {
+		display:none;
+	}
+	.task-name-container {
+		width:95%;
+	}
+	.task-name{
+		color:grey;
+	}
+	.h-line {
+		display:none;
+	}
+	.task-completion{
+		display:none;
+	}
+	.task-pending{
+		display:none;
+	}
+	.task-details-container{
+		height:auto;
+		width:100%;
+		margin-bottom:2rem;
+	}
+	.add-task-container{
+		top:250px;
+		left:23px;
+		width:75%;
+		margin:auto;
+		border-radius:10px;
+	}
+	input[type=text]{
+		height:35px;
+		width:200px;
+	}
+	.add-button{
+		margin-top:15px;
+	}
 }
