--- a/page4.css
+++ b/page4.css
@@ -1,29 +1,113 @@
-body, html {
-    height: 100%;
-  }
-.background-fill{
+
+.container{
+	height:700px;
+	width:700px;
+	margin:auto;
+	font-family: 'Roboto', sans-serif;
+	filter:blur(6px);
+}
+.heading-box{
+	display:flex;
+	flex-wrap:wrap;
+	margin-left:25px;
 	position:relative;
-	border:1px dsolid red;
-	height:100%;
-	width:100%; 	
-	background-image: url("../Images/page2.png");
-	filter:blur(8px);
-	background-repeat:no-repeat;
-	background-size:contain;
-	background-position:center;
-	
+}
+.hline-left{
+	width:200px;
+	margin:auto 0px;
+}
+.heading{
+	width:250px;
+	font-size:2.7rem;
+	font-weight:bold;
+	text-align:center;
+}
+.hline-right{
+	width:200px;
+	margin:auto 0px;
+}
+.back-button-box{
+	width:90px;
+	margin:20px auto 0px auto;
+	display:flex;
+	flex-wrap:wrap;
+	justify-content:space-around;
+	position:absolute;
+	top:100px;
+	left:275px;
+}
+.back-button{
+	height:35px;
+	width:35px;
+	border:0px;
+	border-radius:50%;
+	background-color:red;
+	text-align:center;
+	color:white;
+	font-weight:bold;
+	font-size:1.5rem;
+}
+.back-button-text{
+	padding-top:5px;
+	font-size:20px;
+}
+.task-list-container{
+	margin-top:100px;
+	display:flex;
+	flex-wrap:wrap;
+	justify-content:space-evenly;
+}
+.task-details-container{
+	border:1px solid rgb(255,0,0,0.5);
+	position:relative;
+	height:350px;
+	width:350px;
+	border-radius:5px;
+	box-shadow: 5px 5px 5px grey;
+}
+.task-name-container{
+	margin:30px 0px 0px 110px;
+}
+.task-name{ 
+	font-size:1.5rem;
+	color:red;
+}
+.task-completion{
+	margin:40px 0px 0px 0px;
+	text-decoration:line-through solid;
+	font-weight:bold;
+	font-size:1.2rem;
+	color:red;
+}
+.checkbox-pending{
+	margin-top:35px;
+	margin-left:80px;
+}
+.add-symbol{
+	position:absolute;
+	top: 300px;
+	right:20px;
+	height:30px;
+	width:30px;
+	border:0px;
+	border-radius:50%;
+	background-color:red;
+	text-align:center;
+	font-size:1.4rem;
+	color:white;
 }
 .add-task-container{
-	width:250px;
+	width:300px;
 	border:1px solid red;
-	border-radius:3px;
+	border-radius:8px;
 	text-align:center;
 	padding:20px;
+	padding-bottom:0px;
 	font-family: Verdana;
 	box-shadow:5px 5px 3px 0px grey;
 	position:absolute;
 	top:250px;
-	left:525px;
+	left:500px;
 	z-index:2;
 	background-color:white;
 }
@@ -32,21 +116,105 @@ body, html {
 	text-align:center;
 	padding-bottom:20px;
 }
-input{
-	height:20px;
-	width:175px;
+input[type=text]{
+	height:25px;
+	width:250px;
 	border:1px solid orangered;
+	border-radius:3px;
 	box-shadow:3px 3px 3px 0px grey;
 }
 .add-button{
-	height:20px;
-	width:60px;
+	height:25px;
+	width:65px;
 	border:0px;
-	border-radius:10px;
+	border-radius:15px;
 	cursor:pointer;
 	color:white;
 	background-color:red;
-	margin: 15px auto;
+	margin: 25px auto;
 	text-align:center;
-	
+	padding-top:3px;
 }
+@media screen and (min-width:320px) and (max-width:479px) {
+	.container{
+		width:95%;
+	}
+	.heading-box{
+		margin:0px;
+	}
+	.hline-left{
+		display:none;
+	}
+	.heading{
+		margin-left:35px;
+		font-size:2.5rem;
+		padding-left:0px;
+	}
+	.hline-right{
+		display:none;
+	}
+	.back-button-box{
+		top:15px;
+		left:0px;
+		width:auto;
+	}
+	.back-button{
+		height:35px;
+		width:35px;
+		font-size:1rem;
+	}
+	.back-button-text{
+		display:none;
+	}
+	.task-list-container{
+		margin-top:50px;
+	}
+	.task-details-container{
+		border:1px solid red;
+		border-radius:10px;
+		height:400px;
+		width:80%;
+	}
+	.task-name-container{
+		margin:30px 0px 0px 50px;
+	}
+	.task-name{ 
+		font-size:1.5rem;	
+	}
+	.task-completion{
+		margin:40px 0px 0px 0px;
+		font-size:1.5rem;
+	}
+	.checkbox-pending{
+		margin-top:35px;
+		margin-left:30px;
+		font-size:1.4rem;
+	}
+	input[type=checkbox]
+	{
+		height:18px;
+		width:18px;
+	}
+	.add-symbol{
+		top:350px;
+		height:35px;
+		width:35px;
+		font-size:1.7rem;
+	}
+	.add-task-container{
+		top:250px;
+		left:23px;
+		width:75%;
+		margin:auto;
+		border-radius:10px;
+	}
+	input[type=text]{
+		height:35px;
+		width:200px;
+	}
+	.add-button{
+		margin-top:15px;
+	}
+}
+
+
