--- a/page1.css
+++ b/page1.css
@@ -26,7 +26,7 @@
 	width:30px;
 	border:0px;
 	color:white;
-	font-size:25px;
+	font-size:1.7rem;
 	text-align:center;
 	border-radius:50%;
 	background-color:red;
