--- a/page1.css
+++ b/page1.css
@@ -1,5 +1,6 @@
 
 .container{
+	
 	width:700px;
 	height:400px;
 	margin:125px auto;
@@ -32,6 +33,17 @@
 	background-color:red;
 	margin:14px 0px;
 }
+.add-tasklist-btn{
+	width:30px;
+	height:30px;
+	font-size:22px;
+	border-radius:50%;
+	border:none;
+	cursor:pointer;
+	background-color:red;
+	margin-top:13px;
+	
+}
 .add-list{
 	font-size:1.5rem;
 	font-weight:lighter;
@@ -45,6 +57,7 @@
 }
 .task-details-container{
 	border:1px solid rgb(255,0,0,0.5);
+	position:relative;
 	height:300px;
 	width:200px;
 	border-radius:5px;
@@ -69,6 +82,82 @@
 .task-pending{
 	margin-left:10px;
 }
+
+.task-details-container-footer{
+	position:absolute;
+	top:250px;
+	right:20px;
+}
+.delete-task-btn{
+	width:33px;
+	height:33px;
+	font-size:25px;
+	border-radius:50%;
+	border:none;
+	cursor:pointer;
+	background-color:red;
+	display:inline-block;
+}
+.add-task-btn{
+	width:33px;
+	height:33px;
+	font-size:25px;
+	border-radius:50%;
+	border:none;
+	cursor:pointer;
+	background-color:blue;
+	display:inline-block;
+}
+.fa-custom{
+	color:white;
+	padding-top:4px;
+}
+.add-task-container{
+	width:300px;
+	border:1px solid red;
+	border-radius:8px;
+	text-align:center;
+	padding:20px;
+	padding-bottom:0px;
+	font-family: Verdana;
+	box-shadow:5px 5px 3px 0px grey;
+	position:fixed;
+	top:250px;
+	left:500px;
+	z-index:2;
+	background-color:white;
+	visibility:hidden;
+	
+}
+.new-list{
+	color:red;
+	text-align:center;
+	padding-bottom:20px;
+}
+input[type=text]{
+	height:25px;
+	width:250px;
+	border:1px solid orangered;
+	border-radius:3px;
+	box-shadow:3px 3px 3px 0px grey;
+}
+.popup-button{
+	height:25px;
+	width:65px;
+	border:0px;
+	border-radius:15px;
+	cursor:pointer;
+	color:white;
+	background-color:red;
+	margin: 25px 30px 25px 20px;
+	text-align:center;
+	padding-top:3px;
+	display:inline-block;
+}
+
+
+
+
 
 @media screen and ( min-width:320px ) and ( max-width:480px ) {
 	.container {
